# tokenizer-speed-bench

./: .clang-format  .gitignore  .gitmodules  README.md  compile_all.sh  download_resources.sh  run_all.sh  stats.py
bench/janome-bench/: main.py
bench/kuromoji-bench/: pom.xml
bench/kuromoji-bench/src/main/java/kuromoji_bench/: App.java
bench/kytea-bench/: main.cc
bench/lindera-bench/: Cargo.toml
bench/lindera-bench/src/: main.rs
bench/lindera-ipadic-bench/: Cargo.toml
bench/lindera-ipadic-bench/src/: main.rs
bench/lindera-unidic-bench/: Cargo.toml
bench/lindera-unidic-bench/src/: main.rs
bench/mecab-bench/: main.cc
bench/mecab-ipadic-2_7_0-bench/: main.cc  with_tags.cc
bench/mecab-ipadic-bench/: main.cc
bench/mecab-unidic-2_1_2-bench/: main.cc
bench/mecab-unidic-3_1_0-bench/: main.cc
bench/mecab-unidic-3_1_1-bench/: main.cc
bench/mecab-unidic-bench/: main.cc
bench/rust-tinysegmenter-bench/: Cargo.toml
bench/rust-tinysegmenter-bench/src/: main.rs
bench/sudachi-bench/: pom.xml
bench/sudachi-bench/src/main/java/sudachi_bench/: App.java
bench/sudachirs-bench/: Cargo.toml
bench/sudachirs-bench/src/: main.rs
bench/tinysegmenter-bench/: index.js
bench/vaporetto-bench/: Cargo.toml  build.rs
bench/vaporetto-bench/src/: main.rs
bench/vaporetto-wasm-bench/: Cargo.toml  index.js
bench/vaporetto-wasm-bench/src/: lib.rs
bench/vibrato-bench/: Cargo.toml
bench/vibrato-bench/src/: main.rs  with_tags.rs
resources/: wagahaiwa_nekodearu.txt
scripts_vibrato/: prepare_ipadic-mecab-2_7_0.sh  prepare_unidic-cwj-3_1_0.sh
