[package]
name = "vaporetto-bench"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
vaporetto = { git = "https://github.com/daac-tools/vaporetto.git", rev = "a8308cd", default-features = false, features = ["cache-type-score", "fix-weight-length"] }

[build-dependencies]
vaporetto = { git = "https://github.com/daac-tools/vaporetto.git", rev = "a8308cd", default-features = false, features = ["std", "cache-type-score", "fix-weight-length", "kytea"] }

[profile.release.build-override]
opt-level = 3
